[tool.poetry]
name = "seoul-move"
version = "0.1.0"
description = ""
authors = ["Yongha Hwang <yongha.hwang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^3.1.11"
keplergl = "^0.3.0"
dask = {extras = ["complete"], version = "^2021.9.0"}
geopandas = "^0.9.0"
pyarrow = "^5.0.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
